k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lp-fe
spec:
  selector:
    app: lp
  ports:
    - port: 80
      targetPort: 80
