k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anywork-lp
  annotations:
    cert-manager.io/cluster-issuer: cert-manager
    # nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "www.anywaka.org"
        - "anywaka.org"
      secretName: lp-anywaka-api-tls
  rules:
    - host: anywaka.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lp-fe
                port:
                  number: 80
    - host: www.anywaka.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lp-fe
                port:
                  number: 80
